--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Renuka!!!!!!!!.
-		Now I'm working with webapps!!!!
+		I'm working with webapps!!!!
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
