made changes PC

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,11 @@
         <div class="center text-big bold">
             Hi! I am Renuka!!!!!!!!.
 		I'm working with webapps!!!!
+		making changes locally.....
         </div>
+	 <div class="center">
+	     <img src="/ui/madi.png" class="img-medium"/>
+         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
