[imad-console] Updates article-one.html

--- a/article-one.html
+++ b/article-one.html
@@ -1,2 +1,20 @@
 <html>
+    <head>
+        <title>
+            Article one 
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href='/'>HOME</a>
+        </div>
+        <h1>
+            ARTICLE ONE
+        </h1>
+        <div>
+            <p>
+                this is article one.i have written inside the paragraph tag.font size is very small compared to the h1 tag.  
+            </p>
+        </div>
+    </body>
 </html>
