[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,17 @@
 <html>
+    <head>
+        <title>
+            ARTICLE ONE
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href='/'>HOME</a>
+        </div>
+        <div>
+            <p>
+                this is article one.this tag has predefined styling applied.it has small font size compared to the h1 tag's default styling.
+            </p>
+        </div>
+    </body>
 </html>
