[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,15 +3,26 @@
         <title>
             ARTICLE ONE
         </title>
+        <meta name='viewport' content='width=device-width, initial-scale=1' />
+        <style>
+            .main{
+                max-width:800px;
+                margin:0 auto;
+                color="green";
+                font="comics"
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href='/'>HOME</a>
-        </div>
-        <div>
-            <p>
-                this is article one.this tag has predefined styling applied.it has small font size compared to the h1 tag's default styling.
-            </p>
+        <div class='main'>
+            <div>
+                <a href='/'>HOME</a>
+            </div>
+            <div>
+                <p>
+                    this is article one.this tag has predefined styling applied.it has small font size compared to the h1 tag's default styling.
+                </p>
+            </div>
         </div>
     </body>
 </html>
