[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,8 +8,8 @@
             .main{
                 max-width:800px;
                 margin:0 auto;
-                color="green";
-                font-family="Comic Sans"
+                color= green;
+                font-family=Comic Sans;
             }
         </style>
     </head>
