[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,8 +8,8 @@
             .art1{
                 max-width:800px;
                 margin:0 auto;
-                color= green;
-                font-family=sans-serif;
+                color: green;
+                font-family: sans-serif;
             }
         </style>
     </head>
