--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,6 +10,7 @@
                 margin:0 auto;
                 color: green;
                 font-family: sans-serif;
+                font-size: 50px;
             }
         </style>
     </head>
