--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -21,7 +21,7 @@
             </div>
             <div>
                 <p>
-                    this is article one.this tag has predefined styling applied.it has small font size compared to the h1 tag's default styling.
+                    this is article one.this tag has predefined styling applied.it has small font size compared to the h1 tag's default styling.but i have applied changes using style tag.
                 </p>
             </div>
         </div>
