--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,9 @@
 	 <div class="center">
 	     <img src="/ui/madi.png" class="img-medium"/>
          </div>
+         <script>
+             alert("Hi!!!");
+         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
